zope.testing Changelog
**********************

3.9.5 (Unreleased)
==================

- Deprecated zope.testing.testrunner and zope.testing.exceptions. They have
  been moved to a separate zope.testrunner module, and will be removed from
  zope.testing in 4.0.0, together with zope.testing.doctest.


3.9.4 (2010-04-13)
==================

- LP #560259: Fix subunit output formatter to handle layer setup
  errors.

- LP #399394:  Added a ``--stop-on-error`` / ``--stop`` / ``-x`` option to
  the testrunner.

- LP #498162:  Added a ``--pdb`` alias for the existing ``--post-mortem``
  / ``-D`` option to the testrunner.

- LP #547023:  Added a ``--version`` option to the testrunner.

- Added tests for LP #144569 and #69988.

  https://bugs.launchpad.net/bugs/69988

  https://bugs.launchpad.net/zope3/+bug/144569


3.9.3 (2010-03-26)
==================

- zope.testing.renormalizer no longer imports zope.testing.doctest, which
  caused deprecation warnings.

- Fix testrunner-layers-ntd.txt to suppress output to sys.stderr.

- Suppress zope.testing.doctest deprecation warning when running
  zope.testing's own test suite.


3.9.2 (2010-03-15)
==================

- Fixed broken ``from zope.testing.doctest import *``

3.9.1 (2010-03-15)
==================

- No changes; reuploaded to fix broken 3.9.0 release on PyPI.

3.9.0 (2010-03-12)
==================

- Modified the testrunner to use the standard Python doctest module instead of
  the deprecated zope.testing.doctest.

- Fix testrunner-leaks.txt to use the run_internal helper, so that
  sys.exit() isn't triggered during the test run.

- Added support for conditionally using a subunit-based output
  formatter upon request if subunit and testtools are available. Patch
  contributed by Jonathan Lange.


3.8.6 (2009-12-23)
==================

- Added MANIFEST.in and reuploaded to fix broken 3.8.5 release on PyPI.


3.8.5 (2009-12-23)
==================

- Added DocFileSuite, DocTestSuite, debug_src and debug back BBB imports